<resources>
    <string name="app_name">MeLave</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="reSenha">Repita sua Senha</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonCreate">Criar Conta</string>
    <string name="emailLogin">Email</string>
    <string name="confirmation">Login Realizado com Sucesso</string>
    <string name="keepLoggedin">Lembrar minha senha</string>
    <string name="forgotPassword">Esqueci minha senha</string>
    <string name="forgotPasswordSubmit">Enviar e-mail de recuperação</string>

    //MainActivity
    <string name="lavadorNew">Sou Lavador</string>
    <string name="clientNew">Sou Cliente</string>
    <string name="login">Fazer Login</string>
    <string name="newHere">É novo aqui?</string>

    //CreateLavador
    <string name="nameLavador">Nome do Lavador</string>


    //FeedLavador
    <string name="feedLavador">LOGADO COMO LAVADOR</string>

    //FeedCliente
    <string name="feedCliente">LOGADO COMO CLIENTE</string>
    <string name="complete_wash">Lavagem Completa:</string>
    <string name="medium_wash">Lavagem Meia-Sola:</string>
    <string name="nome">Nome</string>
    <string name="completeName">Nome Completo</string>
    <string name="hello_client">Olá,</string>
    <string name="washer_address">Endereço</string>
    <string name="lavagem_completa">Lavagem Completa</string>
    <string name="lavagem_meia_sola">Lavagem Meia-Sola</string>
    <string name="r">R$</string>
    <string name="adress">Endereço</string>
    <string name="dot">.</string>
    <string name="text_view_available_washer">Lavadores Disponíveis</string>
    <string name="nomedousuario">nomeDoUsuario</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="cor">Cor:</string>
    <string name="situa_o">Situação:</string>
    <string name="marca_do_carro">Marca do Carro</string>
    <string name="modelo_do_carro">Modelo do Carro</string>
    <string name="cor_do_carro">Cor do Carro</string>
    <string name="adicionar_carro">Adicionar Carro</string>
    <string name="carro">+ Carro</string>
    <string name="meus_carros">Meus Carros</string>
    <string name="placa_do_carro">Placa do Carro</string>
    <string name="placa">Placa:</string>
    <string name="modelo">Modelo:</string>
    <string name="carmodel">carModel</string>
    <string name="carcolor">carColor</string>
    <string name="carsituation">carSituation</string>
    <string name="cor">Cor:</string>
    <string name="marca">Marca:</string>
    <string name="carbrand">carBrand</string>
    <string name="situa_o">Situação:</string>

</resources>