<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_feed_client"
    tools:context=".FeedActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_addCarActivity"
        android:layout_width="105dp"
        android:layout_height="28dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/layout_button_login_activity"
        android:text="@string/carro"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/text_view_client_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_MyCars"
        android:layout_width="105dp"
        android:layout_height="28dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/layout_button_login_activity"
        android:text="@string/meus_carros"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_addCarActivity"
        app:layout_constraintStart_toEndOf="@+id/btn_addCarActivity"
        app:layout_constraintTop_toTopOf="@+id/btn_addCarActivity"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/washerList"
        android:layout_width="363dp"
        android:layout_height="574dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/washer_available" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/text_view_available_washer"
        android:textColor="@color/original_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/hello_client"
        android:textColor="@color/original_green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/dot"
        android:textColor="@color/original_green"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_view_client_name"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomedousuario"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />


</androidx.constraintlayout.widget.ConstraintLayout>