<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_activity"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:background="@drawable/login_main_activity"
        android:text="@string/login"
        android:textColor="#0C9788"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_newLavador"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/layout_button_login_activity"
        android:text="@string/lavadorNew"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_newClient"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/layout_button_login_activity"
        android:text="@string/clientNew"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_newLavador"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/newHere"
        app:layout_constraintBottom_toTopOf="@+id/btn_newLavador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>