<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardView_carItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="126dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView3"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="12dp"
        android:text="@string/marca"
        android:textStyle="bold"
        android:layout_marginStart="130dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/carBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="12dp"
        android:text="@string/marca" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:text="@string/modelo"
        android:layout_marginStart="130dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/carModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="40dp"
        android:text="@string/modelo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="68dp"
        android:text="@string/cor"
        android:textStyle="bold"
        android:layout_marginStart="130dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/carColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="68dp"
        android:text="@string/cor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="96dp"
        android:textStyle="bold"
        android:text="@string/placa_do_carro"
        android:layout_marginStart="130dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/carNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="96dp"
        android:text="@string/situa_o" />


</androidx.cardview.widget.CardView>