<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_create_acc"
    tools:context=".Lavador">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_createLavador_washMedium"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/layout_edit_text_input"
        android:hint="@string/r"
        android:paddingBottom="0sp"
        android:paddingEnd="0sp"
        android:paddingLeft="20sp"
        android:paddingRight="0sp"
        android:paddingStart="20sp"
        android:paddingTop="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_createLavador_washComplete"
        android:layout_width="132dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/layout_edit_text_input"
        android:hint="@string/r"
        android:paddingBottom="0sp"
        android:paddingEnd="0sp"
        android:paddingLeft="20sp"
        android:paddingRight="0sp"
        android:paddingStart="20sp"
        android:paddingTop="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/lavagem_completa"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createLavador_adress"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/washer_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createLavador_adress"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_createLavador_adress"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/layout_edit_text_input"
        android:hint="@string/adress"
        android:paddingBottom="0sp"
        android:paddingEnd="0sp"
        android:paddingLeft="20sp"
        android:paddingRight="0sp"
        android:paddingStart="20sp"
        android:paddingTop="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:text="@string/lavagem_meia_sola"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_createLavador_adress"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edit_text_createLavador_washComplete"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_createWasherAdress"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/layout_button_login_activity"
        android:text="@string/buttonCreate"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_createLavador_washMedium"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createLavador_washComplete"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_createLavador_washComplete" />

</androidx.constraintlayout.widget.ConstraintLayout>