<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_createAcc_usuario_"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:layout_marginTop="140dp"
        android:hint="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_createAcc_email"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:layout_marginTop="64dp"
        android:hint="@string/emailLogin"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_createAcc_usuario_"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createAcc_usuario_"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_createAcc_usuario_" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_createAcc_password"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_createAcc_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createAcc_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_createAcc_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_createAcc"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/buttonCreate"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_createAcc_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createAcc_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_createAcc_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/usuario"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createAcc_usuario_"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:text="@string/emailLogin"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createAcc_usuario_"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_createAcc_usuario_" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:text="@string/senha"
        app:layout_constraintStart_toStartOf="@+id/edit_text_createAcc_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_createAcc_email" />

</androidx.constraintlayout.widget.ConstraintLayout>